--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
-  <div class="card__plan card__item">Plano <b>Simples</b></div>
-  <div class="card__price card__item">R$ 100,00/Mês</div>
+  <div class="card__plan card__item">Plano <b>{{plano.infos.tipo}}</b></div>
+  <div class="card__price card__item">R$ {{ plano.infos.preco }}/ Mês</div>
   <!-- <div class="card__button card__item">Adquirir</div> -->
   <app-card-button></app-card-button>
 </div>
